// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timestamp /> render Timestamp with processing 1`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6 relative"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Timestamp
    </span>
  </div>
  <div
    className="flex items-center gap-2 whitespace-nowrap"
  >
    <svg
      className="icon w-4 h-4 "
      onClick={[Function]}
    />
    in about 5 hours
    <span
      className="hidden md:inline-block"
    >
      (
      2022/06/30 05:10:54
      )
    </span>
    <div
      className="ant-divider ant-divider-vertical"
      role="separator"
    />
    <svg
      className="icon w-4 h-4 text-gray-400 text-base"
      onClick={[Function]}
    />
    <div
      className="w-32"
    >
      <div
        className="ant-progress ant-progress-line ant-progress-status-active ant-progress-default"
      >
        <div
          className="ant-progress-outer"
        >
          <div
            className="ant-progress-inner"
          >
            <div
              className="ant-progress-bg"
              style={
                Object {
                  "backgroundImage": "linear-gradient(to right, #108ee9, #87d068)",
                  "borderRadius": undefined,
                  "height": 8,
                  "width": "99.9%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Timestamp /> render Timestamp with success 1`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6 relative"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Timestamp
    </span>
  </div>
  <div
    className="flex items-center gap-2 whitespace-nowrap"
  >
    <span
      aria-label="clock-circle"
      className="anticon anticon-clock-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="clock-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
        />
      </svg>
    </span>
    in about 5 hours
    <span
      className="hidden md:inline-block"
    >
      (
      2022/06/30 05:10:54
      )
    </span>
    <div
      className="ant-divider ant-divider-vertical"
      role="separator"
    />
    <svg
      className="icon w-4 h-4 text-gray-400 text-base"
      onClick={[Function]}
    />
    <span
      className="text-gray-400"
    >
      Confirmed within {{des}}
    </span>
  </div>
</div>
`;
